service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-application
spec:
  type: LoadBalancer
  selector:
    app: wisecow-application
  ports:
    - port: 4499
      targetPort: 4499
