ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
spec:
  rules:
    - host: param-world.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-application
                port:
                  number: 443
  tls:
    - hosts:
        - param-world.click
      secretName: wisecow-tls
